--- a/render.yaml
+++ b/render.yaml
@@ -1,15 +1,17 @@
 services:
   - type: web
-    name: actu-football-gabon
+    name: football-actuel-gabon
     env: php
     plan: free
     buildCommand: |
       composer install --no-dev --optimize-autoloader
-      php artisan key:generate
+      php artisan key:generate --force
       php artisan config:cache
       php artisan route:cache
       php artisan view:cache
-    startCommand: php -S 0.0.0.0:10000 -t public
+      php artisan storage:link
+    startCommand: |
+      php -S 0.0.0.0:10000 -t ./public
     envVars:
       - key: APP_ENV
         value: production
@@ -17,3 +19,11 @@ services:
         value: false
       - key: APP_KEY
         sync: false
+      - key: APP_URL
+        value: https://actu-football-gabon.onrender.com
+      - key: LOG_CHANNEL
+        value: errorlog
+      - key: SESSION_DRIVER
+        value: cookie
+      - key: CACHE_DRIVER
+        value: file
