--- a/render.yaml
+++ b/render.yaml
@@ -6,12 +6,9 @@ services:
     buildCommand: |
       composer install --no-dev --optimize-autoloader
       php artisan key:generate --force
-      php artisan config:cache
-      php artisan route:cache
-      php artisan view:cache
       php artisan storage:link
     startCommand: |
-      php -S 0.0.0.0:10000 -t ./public
+      php artisan serve --host=0.0.0.0 --port=10000
     envVars:
       - key: APP_ENV
         value: production
@@ -27,3 +24,5 @@ services:
         value: cookie
       - key: CACHE_DRIVER
         value: file
+      - key: QUEUE_CONNECTION
+        value: sync
