--- a/.dockerignore
+++ b/.dockerignore
@@ -2,14 +2,17 @@
 .github
 .gitignore
 .env
-.env.example
 node_modules
-vendor
 tests
-storage/logs/*
-storage/framework/cache/*
+storage/logs/*.log
+storage/framework/cache/data/*
 storage/framework/sessions/*
 storage/framework/views/*
 *.md
 .editorconfig
 .phpunit.result.cache
+.DS_Store
+Thumbs.db
+
+# NE PAS ignorer public/ - c'est crucial !
+# NE PAS ignorer vendor/ si vous n'installez pas composer dans Docker
